2006-05-03  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: do a better job of building the buttons.

2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Tool.py (BatchTool): Add class taking care of
	tools with batch transactions.
	(ActivePersonTool.pass): Remove method.
	* src/plugins/Check.py (Check): Derive from BatchTool.
	* src/plugins/ReorderIds.py (ReorderIds): Use batch transactions;
	derive from BatchTool.
	* src/plugins/ChangeTypes.py (ChangeTypes): Use batch
	transactions; derive from BatchTool. 
	* src/plugins/ChangeNames.py (ChangeNames): Derive from BatchTool.
	* src/plugins/PatchNames.py (PatchNames): Use batch transactions;
	derive from BatchTool.
	* src/glade/gramps.glade: Make both buttons' lables in
	questiondialog use underline property.
	* src/GrampsDb/_GrampsInMemDB.py (abort_changes): Remove method.
	* src/GrampsDb/_GrampsDbBase.py (abort_changes): Remove method.
	(GrampsDbBase.transaction_begin): No aborting after batch transaction.
	* src/GrampsDb/_GrampsBSDDB.py (undo,redo): Use the status from
	GrampsDbBase undo/redo;
	(abort_changes): Remove method.
	(GrampsBSDDB.transaction_begin): No aborting after batch transaction.
	* src/ViewManager.py (abort): Add method for abandoning changes.
	(ViewManager.import_data): Add undo warning for imports.

	* configure.in: Set release to 0.SVN.
	* src/DataViews/_PersonView.py (define_actions): Change label.

2006-05-03  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: Optionally exclude text from buttons
	* src/GrampsCfg.py: add SIDEBAR_TEXT option
	* src/GrampsConfigKeys.py: add SIDEBAR_TEXT option
	* data/gramps.schemas.in: add SIDEBAR_TEXT option
	* src/GrampsGconfKeys.py: handle None returned by routines properly
	* src/Filters/Rules/Person/Makefile.am: remove unused files
	* src/DataViews/_FamilyView.py: update on db change
	* src/DataViews/_FamilyList.py: Move ColumnEdit local
	* src/ViewManager.py: remove ColumnEdit, make local
